Fix resizing on mobile for About page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -114,10 +114,13 @@ img {
   display: block;
 }
 
-main > .about {
+.about {
   border-radius: 4px;
   display: grid;
   grid-template-columns: 3fr 1fr;
+  @media (max-width: 480px) {
+    grid-template-columns: 1fr;
+  }
   gap: 20px;
 }
 
